@startuml
'https://plantuml.com/class-diagram

class DataAcess{
    - List<MonHoc> listMH
    + add(MonHoc m);
    + delete(MonHoc m);
}

class MyStream{
    + void addEvent(T t)
    + void addListener(MyStreamListener listener)
    + void removeListener(MyStreamListener listener)
}

interface MyStreamListener<T>{
    + void listen(T t)
}

class Client{}


MyStream o--> MyStreamListener:listeners
DataAcess-->MyStream:stream
MyStreamListener<|..Client
MyStream<--Client:stream
@enduml